Added History title and form for submission

--- a/templates/history.html
+++ b/templates/history.html
@@ -1,9 +1,17 @@
 <htlm>
   <head>
     <title>
+      History
     </title>
   <head>
       <body>
-
+        <form method="post">
+    <div>Charity: <input type="text" name="charity"></div>
+    <div>Amount Donated: <input type="text" name="amountDonated"></div>
+    <div>Date of Donation: <input type="text" name="dateDonation"></div>
+    <input type="submit">
+  </form>
+        <table>
+        </table>
       </body>
 </html>
