--- a/templates/results.html
+++ b/templates/results.html
@@ -1,9 +1,13 @@
 <htlm>
   <head>
     <title>
+      Results
     </title>
   <head>
       <body>
-
+        <form method="post">
+            <div>Charity: <input type="text" name="searchQuery"></div>
+            <input type="submit">
+        </form>
       </body>
 </html>
