--- a/templates/details.html
+++ b/templates/details.html
@@ -1,26 +1,15 @@
-<<<<<<< HEAD
 <html>
   <head>
-    <link rel="stylesheet" href="/static/details.css">
+
   </head>
 
   <body>
     <a href="/search">Search for Charities</a>
-    <h1>App Title</h1>
+    <form method="post">
+      <div>Charity: <input type="text" name="charity"></div>
+      <div>Charity Cause: <input type="text" name="charityCause"></div>
+      <div>News: <input type="text" name="news"></div>
+      <div>Social Media: <input type="text" name="socialMedia"></div>
+    </form>
   </body>
-=======
-<htlm>
-  <head>
-    <link rel="stylesheet" href="/styles/details.css">
-    <title>
-    </title>
-  <head>
-  <body>
-
-<<<<<<< HEAD
-      </body>
->>>>>>> 525d1a8264fb6b71b07cd3d2187229c279846803
-=======
-  </body>
->>>>>>> a1789a99e794d4c709e8d8ecc70773d8d954912c
 </html>
