Added "Search Bar" to page

--- a/templates/search.html
+++ b/templates/search.html
@@ -1,9 +1,15 @@
 <htlm>
   <head>
     <title>
+      Search
     </title>
   <head>
       <body>
-
+        <div id="searchBar">
+          <form method="post">
+              <div>Charity: <input type="text" name="searchQuery"></div>
+              <input type="submit">
+          </form>
+      </div>
       </body>
 </html>
