Added structure for  Charity API

--- a/templates/results.html
+++ b/templates/results.html
@@ -9,5 +9,10 @@
             <div>Charity: <input type="text" name="searchQuery"></div>
             <input type="submit">
         </form>
+        <div id="resultsBox">
+            {{charityName}}
+            {{starRating}}
+            {{deductibility}}
+        </div>
       </body>
 </html>
