details html update number 3
This reverts commit a29a7176c90b9b493e50858be332b245de60b918.

--- a/templates/details.html
+++ b/templates/details.html
@@ -1,17 +1,25 @@
 <html>
   <head>
-
+    <link rel="stylesheet" href="/static/aboutus.css">
   </head>
 
   <body>
     <a href="/search">Search for Charities</a>
-    <form method="post">
-      <div>Charity: <input type="text" name="charity"></div>
-      <div>Star Rating: <input type="text" name="starRating"></div>
-      <div>Deductibility: <input type="text" name="deductibility"></div>
-      <div>Charity Cause: <input type="text" name="charityCause"></div>
-      <div>News: <input type="text" name="news"></div>
-      <div>Social Media: <input type="text" name="socialMedia"></div>
-    </form>
+    <h1>Charity Name:</h1>
+    <div>
+      <h3>Star Rating:</h3>
+      <h3>Deductibility:</h3>
+    </div>
+    <div>
+      <h2>Charity Cause:</h2>
+      <p></p>
+    </div>
+    <div>
+      <h2>News</h2>
+      <p></p>
+    </div>
+    <div>
+      <h4>Social Media:</h4>
+    </div>
   </body>
-</html>
+ </html>
