favorites html update

--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -1,14 +1,19 @@
-<<<<<<< HEAD
 <html>
   <head>
-    
+
   </head>
 
   <body>
     <a href="/search">Search for Charities</a>
     <a href="/history">Donation History</a>
-    <h1>App Title</h1>
+    <h1>Favorite Charities</h1>
+    <table>
+      <tr>
+        <td>Charity</td>
+        <td>Star Rating</td>
+        <td>Deductibility</td>
+        <td>Delete</td>
+      </tr>
+    </table>
   </body>
 </html>
-=======
->>>>>>> parent of a29a717... html skeleton
