Added java link
And some test prints

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,9 @@
 <htlm>
   <head>
     <link rel="stylesheet" href="/static/style.css">
-    <title>
-    </title>
-  <head>
+    <script src="/static/script.js"></script>
+  </head>
   <body>
-
+    <p>yooooo</p>
   </body>
 </html>
