--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -14,6 +14,14 @@
         <td>Deductibility</td>
         <td>Delete</td>
       </tr>
+      {% for charity in allCharities %}
+        <tr>
+          <td>{{charity.name}}</td>
+          <td>{{charity.star_rating}}</td>
+          <td>{{charity.deductibility}}</td>
+          <td><a href="/delete_charity?dog_id={{charity.key.urlsafe()}}">Delete</a></td>
+        </tr>
+      {% endfor %}
     </table>
   </body>
 </html>
