--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -13,6 +13,23 @@
         <td>Star Rating</td>
         <td>Deductibility</td>
         <td>Delete</td>
+      </tr>
+      <tr>
+        <td><input name="charity[name]"></td>
+        <td><input name="charity[rating]"></td>
+        <td><input name="charity[deductibility]"></td>
+        <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
+      </tr>
+      <tr>
+        <td><input name="charity[name]"></td>
+        <td><input name="charity[rating]"></td>
+        <td><input name="charity[deductibility]"></td>
+        <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
+      </tr>
+      <tr>
+        <td><input name="charity[name]"></td>
+        <td><input name="charity[rating]"></td>
+        <td><input name="charity[deductibility]"></td>
         <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
       </tr>
     </table>
