Changed text displayed on submit button to "Search"

--- a/templates/search.html
+++ b/templates/search.html
@@ -9,7 +9,7 @@
         <div id="searchBar">
           <form method="post">
               <div>Charity: <input type="text" name="searchQuery"></div>
-              <input type="submit">
+              <input type="submit" value="Search">
           </form>
       </div>
       </body>
