--- a/templates/results.html
+++ b/templates/results.html
@@ -8,7 +8,7 @@
   <body>
         <form method="post">
             <div>Charity: <input type="text" name="searchQuery"></div>
-            <input type="submit">
+            <input type="submit" value="Search">
         </form>
         <div id="resultsBoxWrapper">
             <div id="charity"> {{charityName}} </div>
