--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-
+    <link rel="stylesheet" href="/styles/favorites.css">
   </head>
 
   <body>
-    <a href="/search">Search for Charities</a>
-    <a href="/history">Donation History</a>
+    <a href="/static/search.html">Search for Charities</a>
+    <a href="/static/history.html">Donation History</a>
     <h1>Favorite Charities</h1>
     <table>
       <tr>
