--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <htlm>
   <head>
     <link rel="stylesheet" href="/static/style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/static/script.js"></script>
   </head>
   <body>
