--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-    <a href="/static/search.html">Search for Charities</a>
+    <a href="/templates/search.html">Search for Charities</a>
     <h1>Dreamy Developers</h1>
     <div>
       <h2>Marium</h2>
