--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -4,8 +4,8 @@
   </head>
 
   <body>
-    <a href="/static/search.html">Search for Charities</a>
-    <a href="/static/history.html">Donation History</a>
+    <a href="/templates/search.html">Search for Charities</a>
+    <a href="/templates/history.html">Donation History</a>
     <h1>Favorite Charities</h1>
     <table>
       <tr>
@@ -14,6 +14,25 @@
         <td>Deductibility</td>
         <td>Delete</td>
       </tr>
+    </tr>
+    <tr>
+      <td><input name="charity[name]"></td>
+      <td><input name="charity[rating]"></td>
+      <td><input name="charity[deductibility]"></td>
+      <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
+    </tr>
+    <tr>
+      <td><input name="charity[name]"></td>
+      <td><input name="charity[rating]"></td>
+      <td><input name="charity[deductibility]"></td>
+      <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
+    </tr>
+    <tr>
+      <td><input name="charity[name]"></td>
+      <td><input name="charity[rating]"></td>
+      <td><input name="charity[deductibility]"></td>
+      <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
+    </tr>
     </table>
   </body>
 </html>
