--- a/templates/search.html
+++ b/templates/search.html
@@ -6,6 +6,9 @@
     </title>
   <head>
       <body>
+        <a href="favorites.html">Favorite Charities</a>
+        <a href="history.html">Donation History</a>
+        <a href="aboutus.html">About Us</a>
         <div id="searchBar">
           <form method="post">
               <div>Charity: <input type="text" name="searchQuery"></div>
