--- a/templates/results.html
+++ b/templates/results.html
@@ -6,6 +6,9 @@
     </title>
   <head>
   <body>
+    <a href="favorites.html">Favorite Charities</a>
+    <a href="history.html">Donation History</a>
+    <a href="aboutus.html">About Us</a>
         <form method="post">
             <div>Charity: <input type="text" name="searchQuery"></div>
             <input type="submit" value="Search">
