Added links to other pages

--- a/templates/history.html
+++ b/templates/history.html
@@ -7,6 +7,9 @@
   <head>
   <body>
         <form method="post">
+          <a href="favorites.html">Favorite Charities</a>
+          <a href="history.html">Donation History</a>
+          <a href="aboutus.html">About Us</a>
     <div>Charity: <input type="text" name="charity"></div>
     <div>Amount Donated: <input type="text" name="amountDonated"></div>
     <div>Date of Donation: <input type="text" name="dateDonation"></div>
