linked html and css pages

--- a/templates/details.html
+++ b/templates/details.html
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-    <a href="/templates/search.html">Search for Charities</a>
+    <a href="search.html">Search for Charities</a>
     <h1>Charity Name:</h1>
     <div>
       <h3 id="star_rating">Star Rating:</h3>
@@ -29,9 +29,5 @@
       <h2 id="charity_cause">{{charity.cause}}</h2>
       <h3 id="news">{{charity.news}}</h3>
     {% endfor %}
-<<<<<<< HEAD
-=======
-
->>>>>>> eb0980b31ed822ba9b6128b9b4dfb7a4a8b86b2e
   </body>
  </html>
