--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -4,17 +4,16 @@
   </head>
 
   <body>
-    <a href="/templates/search.html">Search for Charities</a>
-    <a href="/templates/history.html">Donation History</a>
+    <a href="search.html">Search for Charities</a>
+    <a href="history.html">Donation History</a>
     <h1>Favorite Charities</h1>
     <table>
       <tr>
         <td>Charity</td>
         <td>Star Rating</td>
         <td>Deductibility</td>
-        <td>Delete</td>
       </tr>
-<<<<<<< HEAD
+
       <tr>
         <td><input name="charity[name]"></td>
         <td><input name="charity[rating]"></td>
@@ -33,27 +32,6 @@
         <td><input name="charity[deductibility]"></td>
         <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
       </tr>
-=======
-    </tr>
-    <tr>
-      <td><input name="charity[name]"></td>
-      <td><input name="charity[rating]"></td>
-      <td><input name="charity[deductibility]"></td>
-      <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
-    </tr>
-    <tr>
-      <td><input name="charity[name]"></td>
-      <td><input name="charity[rating]"></td>
-      <td><input name="charity[deductibility]"></td>
-      <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
-    </tr>
-    <tr>
-      <td><input name="charity[name]"></td>
-      <td><input name="charity[rating]"></td>
-      <td><input name="charity[deductibility]"></td>
-      <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
-    </tr>
->>>>>>> eb0980b31ed822ba9b6128b9b4dfb7a4a8b86b2e
     </table>
   </body>
 </html>
