--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<htlm>
+<html>
   <head>
     <link rel="stylesheet" href="/static/style.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
