new file changes

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="/styles/aboutus.css">
+    <link rel="stylesheet" href="/static/styles/aboutus.css">
   </head>
 
   <body>
