--- a/templates/details.html
+++ b/templates/details.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="/styles/details.css">
+    <link rel="stylesheet" href="/static/styles/details.css">
   </head>
 
   <body>
