--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="/styles/favorites.css">
+    <link rel="stylesheet" href="/static/styles/favorites.css">
   </head>
 
   <body>
