Connected HTML to CSS counterparts

--- a/templates/history.html
+++ b/templates/history.html
@@ -1,6 +1,6 @@
 <htlm>
   <head>
-    <link rel="stylesheet" href="/styles/history.css">
+    <link rel="stylesheet" href="/static/styles/history.css">
     <title>
       History
     </title>
