--- a/templates/results.html
+++ b/templates/results.html
@@ -1,6 +1,6 @@
 <htlm>
   <head>
-    <link rel="stylesheet" href="/styles/results.css">
+    <link rel="stylesheet" href="/static/styles/results.css">
     <title>
       Results
     </title>
