--- a/templates/search.html
+++ b/templates/search.html
@@ -1,6 +1,6 @@
 <htlm>
   <head>
-    <link rel="stylesheet" href="/styles/search.css">
+    <link rel="stylesheet" href="/static/styles/search.css">
     <title>
       Search
     </title>
