--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <script src="/static/script.js"></script>
   </head>
   <body>
+    <div id='result'</div>
     <p>yooooo</p>
   </body>
 </html>
