Added links to external pages

--- a/templates/search.html
+++ b/templates/search.html
@@ -6,12 +6,14 @@
     </title>
   <head>
       <body>
-        <a href="favorites.html">Favorite Charities</a>
-        <a href="history.html">Donation History</a>
-        <a href="aboutus.html">About Us</a>
+        <div id ="navBar">
+          <a href="favorites.html">Favorite Charities</a>
+          <a href="history.html">Donation History</a>
+          <a href="aboutus.html">About Us</a>
+        </div>
         <div id="searchBar">
           <form method="post">
-              <div>Charity: <input type="text" name="searchQuery"></div>
+              <div>Search: <input type="text" name="searchQuery"></div>
               <input type="submit" value="Search">
           </form>
       </div>
