--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -6,20 +6,20 @@
   <body>
     <a href="search.html">Search for Charities</a>
     <h1>Dreamy Developers</h1>
-    <div>
+    <div id="marium">
       <h2>Marium</h2>
       <p></p>
       <h3>Instagram Link:<a href=""></a></h3>
     </div>
-    <div>
+    <div id="isabella">
       <h2>Isabella</h2>
       <p></p>
     </div>
-    <div>
+    <div id="walter">
       <h2>Walter</h2>
       <p></p>
     </div>
-    <div>
+    <div id="sam">
       <h2>Sam</h2>
       <p></p>
     </div>
