--- a/static/styles/aboutus.css
+++ b/static/styles/aboutus.css
@@ -1,5 +1,31 @@
 h1 {
-  font-size: 100px;
+  font-size: 80px;
   text-align: center;
-  color: blue;
+  /* font-family: "Courier New"; */
 }
+
+#marium {
+  padding: 20px;
+  border: 5px solid black;
+  margin-right: 60%;
+}
+
+#isabella {
+  padding: 20px;
+  border: 5px solid black;
+  float: right;
+  margin-right: 30%;
+}
+
+#walter {
+  padding: 20px;
+  border: 5px solid black;
+  margin-right: 60%;
+}
+
+#sam {
+  padding: 20px;
+  border: 5px solid black;
+  float: right;
+  margin-right: 30%;
+}\
