adding handlers -mt

--- a/templates/search.html
+++ b/templates/search.html
@@ -12,7 +12,7 @@
         <div id="searchBar">
           <form method="post">
               <div>Charity: <input type="text" name="searchQuery"></div>
-              <input type="submit" value="Search">
+              <input id= "submit" type="submit" value="Search">
           </form>
       </div>
       </body>
