edits to about us css

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -7,20 +7,19 @@
     <a href="search.html">Search for Charities</a>
     <h1>Dreamy Developers</h1>
     <div id="marium">
-      <h2>Marium</h2>
+      <h2>Marium:</h2>
       <p></p>
-      <h3>Instagram Link:<a href=""></a></h3>
     </div>
     <div id="isabella">
-      <h2>Isabella</h2>
+      <h2>Isabella:</h2>
       <p></p>
     </div>
     <div id="walter">
-      <h2>Walter</h2>
+      <h2>Walter:</h2>
       <p></p>
     </div>
     <div id="sam">
-      <h2>Sam</h2>
+      <h2>Sam:</h2>
       <p></p>
     </div>
   </body>
