--- a/static/styles/aboutus.css
+++ b/static/styles/aboutus.css
@@ -5,27 +5,37 @@ h1 {
 }
 
 #marium {
-  padding: 20px;
+  padding-bottom: 80px;
   border: 5px solid black;
-  margin-right: 60%;
+  margin-right: 50%;
+  display: block;
 }
 
 #isabella {
-  padding: 20px;
+  padding-bottom: 80px;
+  padding-right: 20px;
   border: 5px solid black;
-  float: right;
-  margin-right: 30%;
+  display: block;
+  right: 0;
+  margin-left: 50%;
+  margin-top: 0%;
 }
 
 #walter {
-  padding: 20px;
+  padding-bottom: 80px;
   border: 5px solid black;
-  margin-right: 60%;
+  margin-right: 50%;
+  margin-top: 10%;
+  display: block;
 }
 
 #sam {
-  padding: 20px;
+  padding-bottom: 80px;
+  padding-right: 20px;
   border: 5px solid black;
-  float: right;
-  margin-right: 30%;
-}\
+  right: 0;
+  display: inline-block;
+  margin-left: 50%;
+  display: block;
+  margin-top: 0px;
+}
