about us html and css edits

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -4,19 +4,15 @@
   </head>
 
   <body>
+
+    <!-- <ul>
+      <li><a href="search.html">Search for Charities</a></li>
+      <li><a href="history.html">Donation History</a></li>
+    </ul> -->
     <a href="search.html">Search for Charities</a>
     <h1>Dreamy Developers</h1>
-<<<<<<< HEAD
-    <div>
-      <h2>Mariam</h2>
-=======
     <div id="marium">
-<<<<<<< HEAD
-      <h2>Marium:</h2>
-=======
       <h2>Marium</h2>
->>>>>>> 8aa018cbc999dd73ed92986c3409765f09ac069e
->>>>>>> f779d65f85db8e1fb2ecde2bb4beccf43d861833
       <p></p>
     </div>
     <div id="isabella">
