--- a/static/styles/aboutus.css
+++ b/static/styles/aboutus.css
@@ -39,3 +39,24 @@ h1 {
   display: block;
   margin-top: 0px;
 }
+
+/* ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+} */
