search bar gives results

--- a/templates/results.html
+++ b/templates/results.html
@@ -6,7 +6,7 @@
     </title>
   <head>
   <body>
-    <a href="favorites.html">Favorite Charities</a>
+    <!-- <a href="favorites.html">Favorite Charities</a>
     <a href="history.html">Donation History</a>
     <a href="aboutus.html">About Us</a>
         <form method="post">
@@ -19,6 +19,7 @@
             <div id="rating">{{starRating}}</div>
             <div id="deductibility">{{deductibility}}</div>
         </div>
-        {% endfor %}
-      </body>
+        {% endfor %} -->
+    <div id='result'></div> 
+  </body>
 </html>
