--- a/templates/search.html
+++ b/templates/search.html
@@ -13,7 +13,7 @@
         </div>
         <div id="searchBar">
           <form method="post">
-              <div>Search: <input type="text" name="searchQuery"></div>
+              <div id="search"><input type="text" name="searchQuery" placeholder="Search..."></div>
               <input type="submit" value="Search">
           </form>
       </div>
