added nav bar to about us

--- a/static/styles/aboutus.css
+++ b/static/styles/aboutus.css
@@ -40,23 +40,30 @@ h1 {
   margin-top: 0px;
 }
 
-/* ul {
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: grey;
 }
 
 li {
     float: left;
-    display: inline-block;
-    color: white;
+}
+
+li a {
+    display: block;
+    color: #666;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
-li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-} */
+li a:hover:not(.active) {
+    background-color: #ddd;
+}
+
+li a.active {
+    color: white;
+    background-color: #afaeae;
