--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -5,11 +5,12 @@
 
   <body>
 
-    <!-- <ul>
-      <li><a href="search.html">Search for Charities</a></li>
-      <li><a href="history.html">Donation History</a></li>
-    </ul> -->
-    <a href="search.html">Search for Charities</a>
+    <ul>
+      <li><a class="active" href="index.html">Search for a Charity</a></li>
+      <li><a class="active" href="favorites.html">My Favorites</a></li>
+      <li><a class="active" href="history.html">Donation History</a></li>
+    </ul>
+
     <h1>Dreamy Developers</h1>
     <div id="marium">
       <h2>Marium</h2>
