Commented out CSS search placement

--- a/static/styles/search.css
+++ b/static/styles/search.css
@@ -1,10 +1,10 @@
-#searchBar {
+/* #searchBar {
   position: fixed;
   top: 50%;
   left: 50%;
   margin-top: -50px;
   margin-left: -200px;
-}
+} */
 
 #search {
   font-size: 20px;
