Revert "Merge branch 'master' of https://github.com/seehamrun/DreamyDevelopers"
This reverts commit 5ba1aa2207b4f6bffd274e5177154536b4047bcc, reversing
changes made to 1753d1818a3a24af7691345b9253e6004e95ec4a.

--- a/static/styles/aboutus.css
+++ b/static/styles/aboutus.css
@@ -40,30 +40,23 @@ h1 {
   margin-top: 0px;
 }
 
-ul {
+/* ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: grey;
+    background-color: #333;
 }
 
 li {
     float: left;
-}
-
-li a {
-    display: block;
-    color: #666;
+    display: inline-block;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
-li a:hover:not(.active) {
-    background-color: #ddd;
-}
-
-li a.active {
-    color: white;
-    background-color: #afaeae;
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+} */
