--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
     <script src="/static/script.js"></script>
   </head>
   <body>
-    <!-- <div id='result'></div> -->
+    <div id='result'></div>
   </body>
 </html>
