--- a/static/styles/aboutus.css
+++ b/static/styles/aboutus.css
@@ -40,34 +40,31 @@ h1 {
   margin-top: 0px;
 }
 
-/* ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: grey;
 }
 
 li {
-    float: left;
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+  float: left;
 }
 
-<<<<<<< HEAD
-li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-} */
-=======
+li a {
+  display: block;
+  color: #666;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
 li a:hover:not(.active) {
-    background-color: #ddd;
+  background-color: #ddd;
 }
 
 li a.active {
-    color: white;
-    background-color: #afaeae;
+  color: white;
+  background-color: #afaeae;
 }
->>>>>>> 9e46733e681d1a729820c599e657b585b14642cf
