--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -5,9 +5,9 @@
 
   <body>
     <ul>
-      <li><a class="active" href="aboutus.html">About Us</a></li>
-      <li><a class="active" href="history.html">Donation History</a></li>
-      <li><a class="active" href="index.html">Search for a Charity</a></li>
+      <li><a href="aboutus.html">About Us</a></li>
+      <li><a href="history.html">Donation History</a></li>
+      <li><a href="index.html">Search for a Charity</a></li>
     </ul>
     <h1>Favorite Charities</h1>
     <table>
