--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -5,9 +5,9 @@
 
   <body>
     <ul>
-      <li><a class="active" href="index.html">Search for a Charity</a></li>
-      <li><a class="active" href="favorites.html">My Favorites</a></li>
-      <li><a class="active" href="history.html">Donation History</a></li>
+      <li><a href="index.html">Search for a Charity</a></li>
+      <li><a href="favorites.html">My Favorites</a></li>
+      <li><a href="history.html">Donation History</a></li>
     </ul>
     <h1>Dreamy Developers</h1>
     <div id="marium">
