--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -5,7 +5,7 @@
 
   <body>
     <ul>
-      <li><a href="index.html">Search for a Charity</a></li>
+      <li><a href="index">Search for a Charity</a></li>
       <li><a href="favorites.html">My Favorites</a></li>
       <li><a href="history.html">Donation History</a></li>
     </ul>
