about us div edits

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -7,7 +7,7 @@
     <ul>
       <li><a href="index.html">Search for a Charity</a></li>
       <li><a href="favorites.html">My Favorites</a></li>
-      <li><a href="history">Donation History</a></li>
+      <li><a href="history.html">Donation History</a></li>
     </ul>
     <h1>Dreamy Developers</h1>
     <div id="marium">
