database stuff -mt

--- a/templates/history.html
+++ b/templates/history.html
@@ -22,9 +22,9 @@
             <td>Amount Donated</td>
             <td>Date of Donation</td>
           </tr>
-            <td>{{userCharity}}</td>
-            <td>{{userAmount}}</td>
-            <td>{{userDonationDate}}</td>
+            <td>{{charityName}}</td>
+            <td>{{amountDonated}}</td>
+            <td>{{dateDonated}}</td>
           <tr>
           </tr>
         </table>
