--- a/static/styles/search.css
+++ b/static/styles/search.css
@@ -6,6 +6,31 @@
   margin-left: -200px;
 }
 
+button {
+  background-color: green;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+#submit {
+    background-color: white;
+    color: black;
+    border: 2px solid #4CAF50;
+}
+
+#submit:hover {
+    background-color: #4CAF50;
+    color: white;
+}
+
 #search {
   font-size: 20px;
 }
