added nav bar to all html/css

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -10,8 +10,8 @@
       <li><a href="history.html">Donation History</a></li>
     </ul>
     <h1>Dreamy Developers</h1>
-    <div id="marium">
-      <h2>Marium</h2>
+    <div id="mariam">
+      <h2>Mariam:</h2>
       <p></p>
     </div>
     <div id="isabella">
