--- a/templates/history.html
+++ b/templates/history.html
@@ -7,9 +7,11 @@
   <head>
   <body>
         <form method="post">
-          <a href="favorites.html">Favorite Charities</a>
-          <a href="history.html">Donation History</a>
-          <a href="aboutus.html">About Us</a>
+          <ul>
+            <li><a href="favorites.html">My Favorites</a></li>
+            <li><a href="index.html">Search for a Charity</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+          </ul>
     <div>Charity: <input type="text" name="charity"></div>
     <div>Amount Donated: <input type="text" name="amountDonated"></div>
     <div>Date of Donation: <input type="text" name="dateDonation"></div>
