--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,11 @@
     <script src="/static/script.js"></script>
   </head>
   <body>
+    <ul>
+      <li><a href="aboutus.html">About Us</a></li>
+      <li><a href="favorites.html">My Favorites</a></li>
+      <li><a href="history.html">Donation History</a></li>
+    </ul>
     <!-- <div id='result'></div> -->
   </body>
 </html>
