fixed favorites page and fixed html links

--- a/static/styles/aboutus.css
+++ b/static/styles/aboutus.css
@@ -1,7 +1,10 @@
 h1 {
   font-size: 80px;
   text-align: center;
-  /* font-family: "Courier New"; */
+  color:  #ffce00;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+  text-transform: uppercase;
 }
 
 #mariam {
