--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,13 +1,14 @@
 <html>
   <head>
     <link rel="stylesheet" href="/static/styles/aboutus.css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
   </head>
 
   <body>
     <ul>
-      <li><a href="index.html">Search for a Charity</a></li>
-      <li><a href="favorites.html">My Favorites</a></li>
-      <li><a href="history.html">Donation History</a></li>
+      <li><a href="/">Search for a Charity</a></li>
+      <li><a href="/favorites">My Favorites</a></li>
+      <li><a href="/history">Donation History</a></li>
     </ul>
     <h1>Dreamy Developers</h1>
     <div id="mariam">
