--- a/templates/details.html
+++ b/templates/details.html
@@ -5,10 +5,10 @@
 
   <body>
     <ul>
-      <li><a href="aboutus.html">About Us</a></li>
-      <li><a href="favorites.html">My Favorites</a></li>
-      <li><a href="history.html">Donation History</a></li>
-      <li><a href="index.html">Search for a Charity</a></li>
+      <li><a href="/aboutus">About Us</a></li>
+      <li><a href="/favorites">My Favorites</a></li>
+      <li><a href="/history">Donation History</a></li>
+      <li><a href="/">Search for a Charity</a></li>
     </ul>
     <h1>Charity Name:</h1>
     <div>
