--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -5,9 +5,9 @@
 
   <body>
     <ul>
-      <li><a href="aboutus.html">About Us</a></li>
-      <li><a href="history.html">Donation History</a></li>
-      <li><a href="index.html">Search for a Charity</a></li>
+      <li><a href="/aboutus">About Us</a></li>
+      <li><a href="/history">Donation History</a></li>
+      <li><a href="/">Search for a Charity</a></li>
     </ul>
     <h1>Favorite Charities</h1>
     <table>
@@ -16,25 +16,14 @@
         <td>Star Rating</td>
         <td>Deductibility</td>
       </tr>
-
-      <tr>
-        <td><input name="charity[name]"></td>
-        <td><input name="charity[rating]"></td>
-        <td><input name="charity[deductibility]"></td>
-        <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
-      </tr>
-      <tr>
-        <td><input name="charity[name]"></td>
-        <td><input name="charity[rating]"></td>
-        <td><input name="charity[deductibility]"></td>
-        <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
-      </tr>
-      <tr>
-        <td><input name="charity[name]"></td>
-        <td><input name="charity[rating]"></td>
-        <td><input name="charity[deductibility]"></td>
-        <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
-      </tr>
+      {% for charity in charities %}
+        <tr>
+          <td>{{charity.name}}</td>
+          <td>{{charity.rating}}</td>
+          <td>{{charity.deductibility}}</td>
+          <td><a href="/delete_charity?charity_id={{charity.key.urlsafe()}}">Delete</a></td>
+        </tr>
+      {% endfor %}
     </table>
   </body>
 </html>
