Added links to results to go to details page

--- a/templates/search.html
+++ b/templates/search.html
@@ -15,10 +15,8 @@
           <a href="aboutus.html">About Us</a>
         </div>
         <div id="searchBar">
-          <!-- <form method="post"> -->
-            <div>Search: <input id="queryBox" type="text" name="searchQuery"></div>
+            Search: <input id="queryBox" type="text" name="searchQuery">
             <button id="submit">Search</button>
-          <!-- </form> -->
       </div>
       <div id='result'></div>
       </body>
