--- a/templates/details.html
+++ b/templates/details.html
@@ -10,7 +10,7 @@
       <li><a href="history.html">Donation History</a></li>
       <li><a href="index.html">Search for a Charity</a></li>
     </ul>
-    <h1>Charity Name:</h1>
+    <h1>Charity Name: {{charityName}}</h1>
     <div>
       <h3 id="star_rating">Star Rating:</h3>
       <h3 id="deductibility">Deductibility:</h3>
