faxed rest of html headers

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <ul>
-      <li><a href="aboutus.html">About Us</a></li>
-      <li><a href="favorites.html">My Favorites</a></li>
-      <li><a href="history.html">Donation History</a></li>
+      <li><a href="/aboutus">About Us</a></li>
+      <li><a href="/favorites">My Favorites</a></li>
+      <li><a href="/history">Donation History</a></li>
     </ul>
     <!-- <div id='result'></div> -->
   </body>
