--- a/templates/history.html
+++ b/templates/history.html
@@ -7,9 +7,9 @@
   <head>
   <body>
     <ul>
-      <li><a href="favorites.html">My Favorites</a></li>
-      <li><a href="index.html">Search for a Charity</a></li>
-      <li><a href="aboutus.html">About Us</a></li>
+      <li><a href="/favorites">My Favorites</a></li>
+      <li><a href="/">Search for a Charity</a></li>
+      <li><a href="/aboutus">About Us</a></li>
     </ul>
   <h1> Donation History </h1>
   <p> Keep a record of all the charities you have donated to below.
