added nav bar comments

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -5,8 +5,9 @@
   </head>
 
   <body>
+    <!-- nav bar -->
     <ul>
-      <li><a href="/">Search for a Charity</a></li>
+      <li><a href="/search">Search for a Charity</a></li>
       <li><a href="/favorites">My Favorites</a></li>
       <li><a href="/history">Donation History</a></li>
     </ul>
