--- a/templates/search.html
+++ b/templates/search.html
@@ -1,4 +1,4 @@
-<htlm>
+<html>
   <head>
     <link rel="stylesheet" href="/static/styles/search.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -10,7 +10,7 @@
   <head>
       <body>
         <div id ="navBar">
-          <a href="favorites.html">Favorite Charities</a>
+          <a href="/favorites">Favorite Charities</a>
           <a href="history.html">Donation History</a>
           <a href="aboutus.html">About Us</a>
         </div>
