--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -4,10 +4,11 @@
   </head>
 
   <body>
+    <!-- nav bar -->
     <ul>
       <li><a href="/aboutus">About Us</a></li>
       <li><a href="/history">Donation History</a></li>
-      <li><a href="/">Search for a Charity</a></li>
+      <li><a href="/search">Search for a Charity</a></li>
     </ul>
     <h1>Favorite Charities</h1>
     <table>
