--- a/templates/search.html
+++ b/templates/search.html
@@ -1,6 +1,7 @@
 <htlm>
   <head>
     <link rel="stylesheet" href="/static/styles/search.css">
+    <link rel="stylesheet" href="/static/style.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/static/api.js"></script>
     <script src="/static/script.js"></script>
@@ -9,11 +10,16 @@
     </title>
   <head>
       <body>
-        <div id ="navBar">
+        <!-- <div id ="navBar">
           <a href="favorites.html">Favorite Charities</a>
           <a href="history.html">Donation History</a>
           <a href="aboutus.html">About Us</a>
-        </div>
+        </div> -->
+        <ul>
+          <li><a href="/aboutus">About Us</a></li>
+          <li><a href="/favorites">My Favorites</a></li>
+          <li><a href="/history">Donation History</a></li>
+        </ul>
         <div id="searchBar">
             Search: <input id="queryBox" type="text" name="searchQuery">
             <button id="submit">Search</button>
