--- a/templates/history.html
+++ b/templates/history.html
@@ -1,4 +1,4 @@
-<htlm>
+<html>
   <head>
     <link rel="stylesheet" href="/static/styles/history.css">
     <title>
@@ -9,7 +9,7 @@
     <!-- nav bar -->
     <ul>
       <li><a href="/favorites">My Favorites</a></li>
-      <li><a href="/search">Search for a Charity</a></li>
+      <li><a href="/">Search for a Charity</a></li>
       <li><a href="/aboutus">About Us</a></li>
     </ul>
   <h1> Donation History </h1>
