--- a/templates/details.html
+++ b/templates/details.html
@@ -9,7 +9,7 @@
       <li><a href="/aboutus">About Us</a></li>
       <li><a href="/favorites">My Favorites</a></li>
       <li><a href="/history">Donation History</a></li>
-      <li><a href="/search">Search for a Charity</a></li>
+      <li><a href="/">Search for a Charity</a></li>
     </ul>
     <h1>Charity Name: {{charityName}}</h1>
     <div>
