user input saves into database -mt

--- a/templates/history.html
+++ b/templates/history.html
@@ -7,12 +7,12 @@
   <head>
   <body>
         <form method="post">
-          <a href="favorites.html">Favorite Charities</a>
+          <a href="favorites">Favorite Charities</a>
           <a href="history.html">Donation History</a>
           <a href="aboutus.html">About Us</a>
-    <div>Charity: <input type="text" name="charity"></div>
-    <div>Amount Donated: <input type="text" name="amountDonated"></div>
-    <div>Date of Donation: <input type="text" name="dateDonation"></div>
+    <div>Charity: <input type="text" name="charityName"></div>
+    <div>Amount Donated: <input type="text" name="amountDonated" placeholder="enter without currency"></div>
+    <div>Date of Donation: <input type="text" name="dateDonated" placeholder="mm/dd/yyyy"></div>
     <input type="submit">
         </form>
 
