--- a/templates/search.html
+++ b/templates/search.html
@@ -16,6 +16,7 @@
           <a href="aboutus.html">About Us</a>
         </div> -->
         <ul>
+          <li><a href="/">Search for a Charity</a></li>
           <li><a href="/favorites">My Favorites</a></li>
           <li><a href="/history">Donation History</a></li>
           <li><a href="/aboutus">About Us</a></li>
