--- a/templates/history.html
+++ b/templates/history.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="/">Search for a Charity</a></li>
       <li><a href="/favorites">My Favorites</a></li>
+      <li><a href="/history">Donation History</a></li>
       <li><a href="/aboutus">About Us</a></li>
     </ul>
   <h1> Donation History </h1>
