--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="/static/styles/aboutus.css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,700" rel="stylesheet">
   </head>
 
   <body>
