--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -6,9 +6,10 @@
   <body>
     <!-- nav bar -->
     <ul>
-      <li><a href="/aboutus">About Us</a></li>
-      <li><a href="/history">Donation History</a></li>
       <li><a href="/">Search for a Charity</a></li>
+      <li><a href="/favorites">My Favorites</a></li>
+      <li><a href="/history">Donation History</a></li>
+      <li><a href="/aboutus">About Us</a></li>
     </ul>
     <h1>Favorite Charities</h1>
     <table>
