Added favorites link for consistency

--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -7,6 +7,7 @@
     <!-- nav bar -->
     <ul>
       <li><a href="/">Search for a Charity</a></li>
+      <li><a href="/favorites">My Favorites</a></li>
       <li><a href="/history">Donation History</a></li>
       <li><a href="/aboutus">About Us</a></li>
     </ul>
