minor text changes in search.html

--- a/templates/search.html
+++ b/templates/search.html
@@ -10,20 +10,14 @@
     </title>
   <head>
   <body>
-        <!-- <div id ="navBar">
-          <a href="favorites.html">Favorite Charities</a>
-          <a href="history.html">Donation History</a>
-          <a href="aboutus.html">About Us</a>
-        </div> -->
     <ul>
       <li><a href="/aboutus">About Us</a></li>
       <li><a href="/favorites">My Favorites</a></li>
       <li><a href="/history">Donation History</a></li>
     </ul>
-    <!-- loading gif  -->
     <div id="loader" style='display:none'></div>
     <div id="searchBar">
-        Search: <input id="queryBox" type="text" name="searchQuery">
+        Find A Charity: <input id="queryBox" type="text" name="searchQuery">
         <button id="submit">Search</button>
     </div>
     <div id="resultPane" style='display:none'>
