--- a/templates/details.html
+++ b/templates/details.html
@@ -13,8 +13,10 @@
       <li><a href="/history">Donation History</a></li>
       <li><a href="/aboutus">About Us</a></li>
     </ul>
-    <h1>Charity Name: {{charityName}}</h1>
-    <div>
+    <div id="name">
+      <h1>Charity Name: {{charityName}}</h1>
+    </div>
+    <div id="star_ded">
       <h3 id="star_rating">Star Rating:</h3>
       <h3 id="deductibility">Deductibility:</h3>
     </div>
@@ -24,7 +26,7 @@
     <div>
       <h2 id="news">News</h2>
     </div>
-    <div>
+    <div id="social">
       <h4>Social Media:</h4>
     </div>
 
