new url for details page

--- a/templates/details.html
+++ b/templates/details.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="/static/styles/details.css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,700" rel="stylesheet">
+    <script>var einLookup={{ein}}</script>
   </head>
 
   <body>
