Added font Roboto for consistency

--- a/templates/search.html
+++ b/templates/search.html
@@ -5,15 +5,17 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/static/api.js"></script>
     <script src="/static/script.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,700" rel="stylesheet">
     <title>
       Search
     </title>
   <head>
   <body>
     <ul>
-      <li><a href="/aboutus">About Us</a></li>
+      <li><a href="/">Search for a Charity</a></li>
       <li><a href="/favorites">My Favorites</a></li>
       <li><a href="/history">Donation History</a></li>
+      <li><a href="/aboutus">About Us</a></li>
     </ul>
     <div id="loader" style='display:none'></div>
     <div id="searchBar">
