--- a/static/styles/search.css
+++ b/static/styles/search.css
@@ -68,3 +68,7 @@ input {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
