--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="/static/styles/favorites.css">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,700" rel="stylesheet">
   </head>
 
   <body>
