--- a/templates/search.html
+++ b/templates/search.html
@@ -11,9 +11,10 @@
   <head>
   <body>
     <ul>
-      <li><a href="/aboutus">About Us</a></li>
+      <li><a href="/">Search for a Charity</a></li>
       <li><a href="/favorites">My Favorites</a></li>
       <li><a href="/history">Donation History</a></li>
+      <li><a href="/aboutus">About Us</a></li>
     </ul>
     <div id="loader" style='display:none'></div>
     <div id="searchBar">
