css for details

--- a/static/styles/details.css
+++ b/static/styles/details.css
@@ -10,13 +10,15 @@ h1 {
 h2 {
   font-family: 'Roboto', sans-serif;
   font-weight: 200;
-  color: #353535;
+  color: #07deff;
+  font-size: 40px
 }
 
 h3 {
   font-family: 'Roboto', sans-serif;
   font-weight: 200;
-  color: #353535;
+  font-size: 30px;
+  color: #ffce00;
 }
 
 h4 {
@@ -84,9 +86,37 @@ li a.active {
   background-color: #e8e8e8;
 }
 
+#star_rating {
+  padding-bottom: 30px;
+}
+
+#charity_cause {
+  padding-bottom: 20px;
+  padding-top: 20px;
+  padding-left: 20px;
+  border: 3px solid #e8e8e8;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 60px;
+  display: block;
+  background-color: #e8e8e8;
+}
+
+#news {
+  padding-bottom: 50px;
+  padding-top: 50px;
+  padding-left: 20px;
+  border: 3px solid #e8e8e8;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 60px;
+  display: block;
+  background-color: #e8e8e8;
+}
+
 #social {
   padding-bottom: 20px;
-  padding-left: 20px;
+  padding-left: 40px;
   display: block;
   margin-top: 90%;
 }
