--- a/templates/details.html
+++ b/templates/details.html
@@ -20,11 +20,11 @@
       <h3 id="star_rating">Star Rating:</h3>
       <h3 id="deductibility">Deductibility:</h3>
     </div>
-    <div>
-      <h2 id="charity_cause">Charity Cause:</h2>
+    <div id="charity_cause">
+      <h2>Charity Cause:</h2>
     </div>
     <div>
-      <h2 id="news">News</h2>
+      <h2 id="news">News:</h2>
     </div>
     <div id="social">
       <h4>Social Media:</h4>
