--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -14,7 +14,7 @@
     </ul>
     <h1>Favorite Charities</h1>
     <table>
-      <tr>
+      <tr id="firstRow">
         <td>Charity</td>
         <td>Star Rating</td>
         <td>Deductibility</td>
