Added styling to button

--- a/templates/history.html
+++ b/templates/history.html
@@ -19,7 +19,7 @@
         <form method="post">
     <ul id="listOfInputs">
     <li id="firstInput">Charity: <input type="text" name="charityName"></li>
-    <li class="inputs">Amount Donated: <input type="text" name="amountDonated" placeholder="enter without currency"></li>
+    <li class="inputs">Amount Donated: <input type="text" name="amountDonated" placeholder="Enter without currency"></li>
     <li class="inputs">Date of Donation: <input type="text" name="dateDonated" placeholder="mm/dd/yyyy"></li>
     <input class="inputs" id="submitButton" type="submit">
   </ul>
