--- a/static/styles/history.css
+++ b/static/styles/history.css
@@ -34,6 +34,21 @@ th, td {
 
 #submitButton {
   width: 100px;
+  height:20px;
+  background-color: green;
+  border: none;
+  color: white;
+  /* padding: 11px 20px; */
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+#submitButton:hover {
+    background-color: #4CAF50;
+    color: white;
 }
 
 #topRow {
