Added descriptive language

--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -13,6 +13,7 @@
       <li><a href="/aboutus">About Us</a></li>
     </ul>
     <h1>Favorite Charities</h1>
+    <p> Your favorite charities appear here. </p>
     <table>
       <tr id="firstRow">
         <td>Charity</td>
