--- a/templates/search.html
+++ b/templates/search.html
@@ -19,7 +19,7 @@
     </ul>
     <div id="loader" style='display:none'></div>
     <div id="searchBar">
-        Find A Charity: <input id="queryBox" type="text" name="searchQuery">
+        <input id="queryBox" type="text" name="searchQuery" placeholder="Find a Charity...">
         <button id="submit">Search</button>
     </div>
     <div id="resultPane" style='display:none'>
