--- a/static/styles/details.css
+++ b/static/styles/details.css
@@ -72,7 +72,7 @@ li a.active {
   background-color: #e8e8e8;
 }
 
-#star_ded {
+#website_ded {
   padding-bottom: 30px;
   padding-top: 30px;
   padding-left: 20px;
@@ -89,4 +89,25 @@ li a.active {
   padding-left: 20px;
   display: block;
   margin-top: 90%;
+}
+
+#website:link {
+    color: green;
+    background-color: transparent;
+    text-decoration: none;
+}
+#website:visited {
+    color: purple;
+    background-color: transparent;
+    text-decoration: none;
+}
+#website:hover {
+    color: red;
+    background-color: transparent;
+    text-decoration: underline;
+}
+#website:active {
+    color: #ff6666;
+    background-color: transparent;
+    text-decoration: underline;
 }
